// ──────────────────────────────────────────────────────────────
// Harmorise — Prisma Schema
// DB: PostgreSQL 16 + TimescaleDB
// 버전: v1.4  (AI 평가 도메인 추가 — PracticeRecording, AiAnalysisJob, AiAnalysisResult)
// ──────────────────────────────────────────────────────────────

generator client {
  provider = "prisma-client-js"
  output   = "../../../node_modules/.prisma/client"
}

/// Seed: npx ts-node apps/api/prisma/seed.ts

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ──────────────────────────────────────────────────────────────
// ENUM 정의
// ──────────────────────────────────────────────────────────────

enum Role {
  ADMIN
  MEMBER
}

enum LessonStatus {
  PENDING
  ACTIVE
  ENDED
}

enum PracticeType {
  BASIC         // 기초 연습
  SONG          // 곡 연습
  IMPROVISATION // 즉흥 연주
  THEORY        // 이론 학습
}

enum ReportType {
  WEEKLY
  MONTHLY
}

enum SubscriptionPlan {
  FREE
  PREMIUM
}

enum FriendRequestStatus {
  PENDING
  ACCEPTED
  REJECTED
}

enum RoomMemberRole {
  HOST
  MEMBER
}

enum RoomJoinRequestStatus {
  PENDING
  ACCEPTED
  REJECTED
}

// ──────────────────────────────────────────────────────────────
// 전화번호 인증 도메인
// ──────────────────────────────────────────────────────────────

model PhoneVerification {
  id        String   @id @default(uuid())
  phone     String   @db.VarChar(20)
  code      String   @db.VarChar(6)
  expiresAt DateTime @db.Timestamptz
  isUsed    Boolean  @default(false)
  createdAt DateTime @default(now()) @db.Timestamptz

  @@index([phone])
  @@map("phone_verifications")
}

// ──────────────────────────────────────────────────────────────
// 사용자 도메인
// ──────────────────────────────────────────────────────────────

model User {
  id             String    @id @default(uuid())
  email          String    @unique @db.VarChar(255)
  passwordHash   String?   @db.VarChar(255)           // 소셜 로그인 시 NULL
  role           Role      @default(MEMBER)
  isTeacher      Boolean   @default(false)             // TRUE면 레슨 제공 가능
  phone          String?   @unique @db.VarChar(20)    // 전화번호 (인증 완료 후 저장)
  socialProvider String?   @db.VarChar(20)            // kakao | google | apple
  socialId       String?   @db.VarChar(255)
  isActive       Boolean   @default(true)
  lastLoginAt    DateTime? @db.Timestamptz
  createdAt      DateTime  @default(now()) @db.Timestamptz
  updatedAt      DateTime  @updatedAt @db.Timestamptz

  // Relations
  profile              UserProfile?
  subscription         Subscription?
  streak               Streak?
  notificationSettings NotificationSettings?
  songs                Song[]
  practiceSessions     PracticeSession[]
  memos                Memo[]
  bpmRecords           BpmRecord[]
  reports              Report[]
  teachingRelations    LessonRelation[]      @relation("TeacherRelation")
  studentRelations     LessonRelation[]      @relation("StudentRelation")
  auditLogs            AuditLog[]
  // 커뮤니티
  sentFriendRequests     FriendRequest[]     @relation("SentRequests")
  receivedFriendRequests FriendRequest[]     @relation("ReceivedRequests")
  friends                Friend[]            @relation("UserFriends")
  friendOf               Friend[]            @relation("FriendOf")
  ownedRooms             Room[]
  roomMembers            RoomMember[]
  roomJoinRequests       RoomJoinRequest[]
  // AI 평가
  practiceRecordings     PracticeRecording[]
  aiAnalysisJobs         AiAnalysisJob[]
  aiAnalysisResults      AiAnalysisResult[]

  @@map("users")
}

model UserProfile {
  id                 String    @id @default(uuid())
  userId             String    @unique
  nickname           String    @db.VarChar(50)
  handle             String    @unique @db.VarChar(30)  // @handle — 고유 식별자, 월 1회 변경
  nicknameChangedAt  DateTime? @db.Timestamptz          // 닉네임 마지막 변경 시각 (월 1회 제한)
  bio                String?   @db.VarChar(150)          // 자기소개
  profileImageUrl    String?
  mainInstrumentId   String?
  dailyGoalMinutes   Int       @default(30)
  weeklyGoalMinutes  Int       @default(150)
  createdAt          DateTime  @default(now()) @db.Timestamptz
  updatedAt          DateTime  @updatedAt @db.Timestamptz

  // Relations
  user           User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  mainInstrument Instrument? @relation(fields: [mainInstrumentId], references: [id])

  @@map("user_profiles")
}

model Subscription {
  id        String           @id @default(uuid())
  userId    String           @unique
  plan      SubscriptionPlan @default(FREE)
  startedAt DateTime         @default(now()) @db.Timestamptz
  expiresAt DateTime?        @db.Timestamptz  // FREE는 NULL
  isActive  Boolean          @default(true)
  createdAt DateTime         @default(now()) @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("subscriptions")
}

model LessonRelation {
  id        String       @id @default(uuid())
  teacherId String
  studentId String
  status    LessonStatus @default(PENDING)
  startedAt DateTime?    @db.Timestamptz
  endedAt   DateTime?    @db.Timestamptz
  createdAt DateTime     @default(now()) @db.Timestamptz
  updatedAt DateTime     @updatedAt @db.Timestamptz

  // Relations
  teacher User @relation("TeacherRelation", fields: [teacherId], references: [id])
  student User @relation("StudentRelation", fields: [studentId], references: [id])

  @@unique([teacherId, studentId])
  @@index([teacherId])
  @@index([studentId])
  @@map("lesson_relations")
}

// ──────────────────────────────────────────────────────────────
// 커뮤니티 도메인 — 친구
// ──────────────────────────────────────────────────────────────

model FriendRequest {
  id         String              @id @default(uuid())
  fromUserId String
  toUserId   String
  status     FriendRequestStatus @default(PENDING)
  createdAt  DateTime            @default(now()) @db.Timestamptz
  updatedAt  DateTime            @updatedAt @db.Timestamptz

  // Relations
  fromUser User @relation("SentRequests",     fields: [fromUserId], references: [id], onDelete: Cascade)
  toUser   User @relation("ReceivedRequests", fields: [toUserId],   references: [id], onDelete: Cascade)

  @@unique([fromUserId, toUserId])
  @@index([toUserId, status])
  @@map("friend_requests")
}

/// 양방향 친구 관계 — 수락 시 (A→B), (B→A) 두 행 삽입
model Friend {
  userId    String
  friendId  String
  createdAt DateTime @default(now()) @db.Timestamptz

  // Relations
  user   User @relation("UserFriends", fields: [userId],   references: [id], onDelete: Cascade)
  friend User @relation("FriendOf",    fields: [friendId], references: [id], onDelete: Cascade)

  @@id([userId, friendId])
  @@index([userId])
  @@map("friends")
}

// ──────────────────────────────────────────────────────────────
// 커뮤니티 도메인 — 연습 방
// ──────────────────────────────────────────────────────────────

model Room {
  id          String   @id @default(uuid())
  hostId      String
  name        String   @db.VarChar(20)
  description String?  @db.VarChar(100)
  inviteCode  String   @unique @db.VarChar(6)   // 대문자+숫자 6자리
  maxMembers  Int      @default(20)
  createdAt   DateTime @default(now()) @db.Timestamptz
  updatedAt   DateTime @updatedAt @db.Timestamptz

  // Relations
  host         User              @relation(fields: [hostId], references: [id], onDelete: Cascade)
  members      RoomMember[]
  joinRequests RoomJoinRequest[]

  @@index([hostId])
  @@map("rooms")
}

/// 방 멤버 (방장 포함)
model RoomMember {
  roomId   String
  userId   String
  role     RoomMemberRole @default(MEMBER)
  joinedAt DateTime       @default(now()) @db.Timestamptz

  // Relations
  room Room @relation(fields: [roomId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([roomId, userId])
  @@index([userId])
  @@map("room_members")
}

/// 방 입장 요청 — 방장 수락 후 room_members에 추가됨
model RoomJoinRequest {
  id        String               @id @default(uuid())
  roomId    String
  userId    String
  status    RoomJoinRequestStatus @default(PENDING)
  createdAt DateTime             @default(now()) @db.Timestamptz
  updatedAt DateTime             @updatedAt @db.Timestamptz

  // Relations
  room Room @relation(fields: [roomId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([roomId, userId])
  @@index([roomId, status])
  @@map("room_join_requests")
}

// ──────────────────────────────────────────────────────────────
// 악기 / 곡 도메인
// ──────────────────────────────────────────────────────────────

model Instrument {
  id       String  @id @default(uuid())
  name     String  @unique @db.VarChar(50)
  category String? @db.VarChar(50)  // 현악기 | 건반 | 타악기 등
  isActive Boolean @default(true)

  // Relations
  practiceSessions  PracticeSession[]
  userProfiles      UserProfile[]

  @@map("instruments")
}

model Song {
  id        String   @id @default(uuid())
  userId    String
  title     String   @db.VarChar(200)
  artist    String?  @db.VarChar(200)
  targetBpm Int?
  createdAt DateTime @default(now()) @db.Timestamptz
  updatedAt DateTime @updatedAt @db.Timestamptz

  // Relations
  user             User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  practiceSessions PracticeSession[]
  bpmRecords       BpmRecord[]

  @@index([userId])
  @@map("songs")
}

// ──────────────────────────────────────────────────────────────
// 연습 도메인
// ──────────────────────────────────────────────────────────────

model PracticeSession {
  id              String   @id @default(uuid())
  userId          String
  songId          String?
  instrumentId    String?
  practicedAt     DateTime @default(now()) @db.Date
  durationMinutes Int      // 1~720 분
  bpm             Int?     // 이 세션의 BPM
  createdAt       DateTime @default(now()) @db.Timestamptz
  updatedAt       DateTime @updatedAt @db.Timestamptz

  // Relations
  user         User                    @relation(fields: [userId], references: [id], onDelete: Cascade)
  song         Song?                   @relation(fields: [songId], references: [id], onDelete: SetNull)
  instrument   Instrument?             @relation(fields: [instrumentId], references: [id])
  sessionTypes PracticeSessionType[]
  memos        Memo[]
  bpmRecords   BpmRecord[]
  recordings   PracticeRecording[]
  aiResults    AiAnalysisResult[]

  @@index([userId])
  @@index([practicedAt(sort: Desc)])
  @@index([userId, practicedAt(sort: Desc)])
  @@map("practice_sessions")
}

model PracticeSessionType {
  sessionId    String
  practiceType PracticeType

  // Relations
  session PracticeSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@id([sessionId, practiceType])
  @@map("practice_session_types")
}

model Memo {
  id        String   @id @default(uuid())
  userId    String
  sessionId String?  // NULL 가능 — 독립 메모
  content   String   // 최대 1,000자
  createdAt DateTime @default(now()) @db.Timestamptz
  updatedAt DateTime @updatedAt @db.Timestamptz

  // Relations
  user    User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  session PracticeSession? @relation(fields: [sessionId], references: [id], onDelete: SetNull)

  @@index([userId])
  @@index([sessionId])
  @@map("memos")
}

// ──────────────────────────────────────────────────────────────
// BPM 도메인 (TimescaleDB hypertable)
// NOTE: hypertable 변환은 마이그레이션 이후 별도 SQL로 실행:
//   SELECT create_hypertable('bpm_records', 'recorded_at');
// ──────────────────────────────────────────────────────────────

model BpmRecord {
  id         String   @default(uuid())
  userId     String
  songId     String
  sessionId  String?
  bpm        Int
  recordedAt DateTime @default(now()) @db.Timestamptz  // 파티션 기준

  // Relations
  user    User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  song    Song             @relation(fields: [songId], references: [id], onDelete: Cascade)
  session PracticeSession? @relation(fields: [sessionId], references: [id], onDelete: SetNull)

  // hypertable이므로 PK 대신 복합 인덱스로 관리
  @@id([id, recordedAt])
  @@index([userId, songId, recordedAt(sort: Desc)])
  @@map("bpm_records")
}

// ──────────────────────────────────────────────────────────────
// 통계 / 리포트 도메인
// ──────────────────────────────────────────────────────────────

model Streak {
  userId           String    @id
  currentStreak    Int       @default(0)
  longestStreak    Int       @default(0)
  lastPracticedAt  DateTime? @db.Date
  updatedAt        DateTime  @updatedAt @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("streaks")
}

model Report {
  id          String     @id @default(uuid())
  userId      String
  reportType  ReportType
  periodStart DateTime   @db.Date
  periodEnd   DateTime   @db.Date
  data        Json       @default("{}")
  generatedAt DateTime   @default(now()) @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, reportType, periodStart])
  @@index([userId, reportType, periodStart(sort: Desc)])
  @@map("reports")
}

// ──────────────────────────────────────────────────────────────
// 알림 설정 도메인
// ──────────────────────────────────────────────────────────────

model NotificationSettings {
  userId              String   @id
  reminderEnabled     Boolean  @default(false)
  reminderTime        DateTime? @db.Time       // 예: '20:00:00'
  streakAlertEnabled  Boolean  @default(true)
  goalAlertEnabled    Boolean  @default(true)
  reportAlertEnabled  Boolean  @default(true)
  updatedAt           DateTime @updatedAt @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("notification_settings")
}

// ──────────────────────────────────────────────────────────────
// 감사 로그 도메인 (Audit Log)
// ──────────────────────────────────────────────────────────────

enum AuditAction {
  LOGIN_SUCCESS
  LOGIN_FAIL
  PRACTICE_CREATE
  PRACTICE_DELETE
  PROFILE_UPDATE
  ADMIN_USER_STATUS_CHANGE
}

// ──────────────────────────────────────────────────────────────
// AI 평가 도메인 (Phase 3)
// ──────────────────────────────────────────────────────────────

/// 연습 녹음 파일 메타데이터
/// 실제 파일은 S3(또는 GCS/R2)에 저장, 여기선 키와 상태만 관리
model PracticeRecording {
  id              String          @id @default(uuid())
  userId          String
  sessionId       String?         // 연습 세션과 연결 (선택 — 독립 녹음도 허용)

  // 파일 정보
  storageKey      String          // S3 object key: "recordings/{userId}/{uuid}.webm"
  fileSizeBytes   Int             // 업로드된 파일 크기 (bytes)
  durationSeconds Int             // 녹음 길이 (초)
  mimeType        String          @db.VarChar(50)  // audio/webm, audio/mp4, audio/wav

  // 상태 머신
  status          RecordingStatus @default(UPLOADED)

  createdAt       DateTime        @default(now()) @db.Timestamptz

  // Relations
  user        User             @relation(fields: [userId],    references: [id], onDelete: Cascade)
  session     PracticeSession? @relation(fields: [sessionId], references: [id], onDelete: SetNull)
  analysisJob AiAnalysisJob?

  @@index([userId, createdAt(sort: Desc)])
  @@map("practice_recordings")
}

enum RecordingStatus {
  UPLOADED    // S3 업로드 완료, 분석 대기
  PROCESSING  // 분석 중 (BullMQ 잡 실행)
  ANALYZED    // 분석 완료
  FAILED      // 분석 실패 (재시도 가능)
  EXPIRED     // 원본 파일 삭제됨 (30일 보존 정책), 분석 결과는 유지
}

/// AI 분석 작업 — 비동기 처리 상태 추적 + 비용 관리
model AiAnalysisJob {
  id          String    @id @default(uuid())
  recordingId String    @unique
  userId      String

  // 사용 모델 정보 (나중에 모델 교체/A-B 테스트 대비)
  provider    AiProvider @default(GEMINI)
  model       String     @db.VarChar(100)  // "gemini-2.0-flash", "gpt-4o-audio-preview" 등

  // 처리 상태
  status      JobStatus  @default(PENDING)
  errorMessage String?   // 실패 시 에러 메시지 (재시도 판단용)
  retryCount  Int        @default(0)

  // 비용 추적 (프리미엄 월별 사용량 제한 계산용)
  tokensUsed    Int?     // 소모된 토큰 수
  audioSeconds  Int?     // 실제 분석된 오디오 길이 (초)

  startedAt   DateTime? @db.Timestamptz
  completedAt DateTime? @db.Timestamptz
  createdAt   DateTime  @default(now()) @db.Timestamptz

  // Relations
  recording PracticeRecording @relation(fields: [recordingId], references: [id], onDelete: Cascade)
  user      User              @relation(fields: [userId],      references: [id], onDelete: Cascade)
  result    AiAnalysisResult?

  @@index([userId, createdAt(sort: Desc)])
  @@index([status, createdAt])   // Worker가 PENDING 잡 조회 시 사용
  @@map("ai_analysis_jobs")
}

enum AiProvider {
  GEMINI      // Google Gemini API (기본)
  OPENAI      // OpenAI GPT-4o Audio
  LOCAL       // Basic Pitch + Librosa (오픈소스 객관 지표용)
}

enum JobStatus {
  PENDING     // 큐 대기
  PROCESSING  // Worker 실행 중
  COMPLETED   // 완료
  FAILED      // 실패 (retryCount 확인)
}

/// AI 분석 결과 — 피드백 텍스트 + 객관 지표
model AiAnalysisResult {
  id        String   @id @default(uuid())
  jobId     String   @unique
  userId    String
  sessionId String?  // practice_sessions와 연결 (선택)

  // Gemini 자연어 피드백
  feedback  String   // AI가 생성한 코멘트 (한국어)
  language  String   @default("ko") @db.VarChar(10)

  // 객관 지표 — JSONB로 악기/상황별 유연하게 확장
  // 예시 구조:
  // {
  //   "bpmConsistency": 87,          // BPM 일관성 점수 0-100 (Librosa)
  //   "noteDensityPerMin": 42,        // 분당 음 수 (Basic Pitch)
  //   "continuousPlaySeconds": 252,   // 최장 연속 연주 구간 (초)
  //   "pitchAccuracy": null,          // 단선율 악기만 (기타 코드는 null)
  //   "rhythmAccuracy": 91,           // 박자 정확도 0-100
  //   "tempoStability": 83            // 템포 안정성 0-100
  // }
  metrics   Json     @default("{}")

  // 종합 점수 — 향후 게임화/레벨업 연동 대비 (현재 선택)
  score     Int?     // 0-100

  createdAt DateTime @default(now()) @db.Timestamptz

  // Relations
  job     AiAnalysisJob    @relation(fields: [jobId],     references: [id], onDelete: Cascade)
  user    User             @relation(fields: [userId],    references: [id], onDelete: Cascade)
  session PracticeSession? @relation(fields: [sessionId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt(sort: Desc)])
  @@map("ai_analysis_results")
}

model AuditLog {
  id        String      @id @default(uuid())
  userId    String?     // nullable — 로그인 실패처럼 유저 특정 불가한 경우
  action    AuditAction
  meta      Json        @default("{}")  // 부가 정보 (ip, targetId 등)
  createdAt DateTime    @default(now()) @db.Timestamptz

  // Relations
  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt(sort: Desc)])
  @@index([action, createdAt(sort: Desc)])
  @@map("audit_logs")
}
