---
title: Harmorise ERD (v1.4 — AI 평가 도메인 추가 / phone_verifications 추가)
---
erDiagram

  phone_verifications {
    uuid    id              PK
    varchar phone
    varchar code
    timestamptz expires_at
    boolean is_used
    timestamptz created_at
  }

  users {
    uuid    id              PK
    varchar email           UK
    varchar password_hash
    varchar role            "ADMIN | MEMBER"
    boolean is_teacher      "기본값 false"
    varchar social_provider
    varchar social_id
    boolean is_active
    timestamptz last_login_at
    timestamptz created_at
    timestamptz updated_at
  }

  user_profiles {
    uuid    id              PK
    uuid    user_id         FK
    varchar nickname
    varchar handle          UK "@ handle"
    varchar bio             "자기소개 최대 150자"
    text    profile_image_url
    int     main_instrument_id FK
    int     daily_goal_minutes
    int     weekly_goal_minutes
    timestamptz nickname_changed_at "닉네임 변경 시각 (월 1회 제한)"
    timestamptz created_at
    timestamptz updated_at
  }

  subscriptions {
    uuid    id              PK
    uuid    user_id         FK
    varchar plan            "FREE | PREMIUM"
    timestamptz started_at
    timestamptz expires_at
    boolean is_active
    timestamptz created_at
  }

  lesson_relations {
    uuid    id              PK
    uuid    teacher_id      FK
    uuid    student_id      FK
    varchar status          "PENDING | ACTIVE | ENDED"
    timestamptz started_at
    timestamptz ended_at
    timestamptz created_at
    timestamptz updated_at
  }

  instruments {
    int     id              PK
    varchar name            UK
    varchar category
    boolean is_active
  }

  songs {
    uuid    id              PK
    uuid    user_id         FK
    varchar title
    varchar artist
    int     target_bpm
    timestamptz created_at
    timestamptz updated_at
  }

  practice_sessions {
    uuid    id              PK
    uuid    user_id         FK
    uuid    song_id         FK
    int     instrument_id   FK
    date    practiced_at
    int     duration_minutes
    int     bpm
    timestamptz created_at
    timestamptz updated_at
  }

  practice_session_types {
    uuid    session_id      FK
    varchar practice_type   "BASIC | SONG | IMPROVISATION | THEORY"
  }

  memos {
    uuid    id              PK
    uuid    user_id         FK
    uuid    session_id      FK
    text    content
    timestamptz created_at
    timestamptz updated_at
  }

  bpm_records {
    uuid    id
    uuid    user_id         FK
    uuid    song_id         FK
    uuid    session_id      FK
    int     bpm
    timestamptz recorded_at "hypertable 파티션 키"
  }

  streaks {
    uuid    user_id         PK "FK"
    int     current_streak
    int     longest_streak
    date    last_practiced_at
    timestamptz updated_at
  }

  reports {
    uuid    id              PK
    uuid    user_id         FK
    varchar report_type     "WEEKLY | MONTHLY"
    date    period_start
    date    period_end
    jsonb   data
    timestamptz generated_at
  }

  notification_settings {
    uuid    user_id         PK "FK"
    boolean reminder_enabled
    time    reminder_time
    boolean streak_alert_enabled
    boolean goal_alert_enabled
    boolean report_alert_enabled
    timestamptz updated_at
  }

  %% ── 커뮤니티 도메인 ──
  friend_requests {
    uuid    id              PK
    uuid    from_user_id    FK
    uuid    to_user_id      FK
    varchar status          "PENDING | ACCEPTED | REJECTED"
    timestamptz created_at
    timestamptz updated_at
  }

  friends {
    uuid    user_id         FK
    uuid    friend_id       FK
    timestamptz created_at
  }

  rooms {
    uuid    id              PK
    uuid    host_id         FK
    varchar name            "최대 20자"
    varchar description     "최대 100자"
    varchar invite_code     UK "6자리 대문자+숫자"
    int     max_members     "기본값 20"
    timestamptz created_at
    timestamptz updated_at
  }

  room_members {
    uuid    room_id         FK
    uuid    user_id         FK
    varchar role            "HOST | MEMBER"
    timestamptz joined_at
  }

  room_join_requests {
    uuid    id              PK
    uuid    room_id         FK
    uuid    user_id         FK
    varchar status          "PENDING | ACCEPTED | REJECTED"
    timestamptz created_at
    timestamptz updated_at
  }

  %% ── AI 평가 도메인 ──
  practice_recordings {
    uuid    id              PK
    uuid    user_id         FK
    uuid    session_id      FK
    text    storage_key     "S3 object key"
    int     file_size_bytes
    int     duration_seconds
    varchar mime_type
    varchar status          "UPLOADED | PROCESSING | ANALYZED | FAILED | EXPIRED"
    timestamptz created_at
  }

  ai_analysis_jobs {
    uuid    id              PK
    uuid    recording_id    FK "UK"
    uuid    user_id         FK
    varchar provider        "GEMINI | OPENAI | LOCAL"
    varchar model
    varchar status          "PENDING | PROCESSING | COMPLETED | FAILED"
    text    error_message
    int     retry_count
    int     tokens_used
    int     audio_seconds
    timestamptz started_at
    timestamptz completed_at
    timestamptz created_at
  }

  ai_analysis_results {
    uuid    id              PK
    uuid    job_id          FK "UK"
    uuid    user_id         FK
    uuid    session_id      FK
    text    feedback
    varchar language
    jsonb   metrics
    int     score
    timestamptz created_at
  }

  %% ──────────────────────────────────────────────
  %% 사용자 도메인
  %% ──────────────────────────────────────────────
  users ||--o|  user_profiles           : "1:1"
  users ||--o|  subscriptions           : "1:1"
  users ||--o|  streaks                 : "1:1"
  users ||--o|  notification_settings   : "1:1"

  %% 레슨 관계 (self-referencing N:M)
  users ||--o{  lesson_relations        : "teacher_id"
  users ||--o{  lesson_relations        : "student_id"

  %% ──────────────────────────────────────────────
  %% 악기 / 곡 도메인
  %% ──────────────────────────────────────────────
  instruments   ||--o{  practice_sessions       : "instrument_id"
  instruments   ||--o{  user_profiles           : "main_instrument_id"
  users         ||--o{  songs                   : "user_id"

  %% ──────────────────────────────────────────────
  %% 연습 도메인
  %% ──────────────────────────────────────────────
  users             ||--o{  practice_sessions       : "user_id"
  songs             ||--o{  practice_sessions       : "song_id"
  practice_sessions ||--o{  practice_session_types  : "session_id"
  users             ||--o{  memos                   : "user_id"
  practice_sessions ||--o|  memos                   : "session_id"

  %% ──────────────────────────────────────────────
  %% BPM 도메인 (TimescaleDB hypertable)
  %% ──────────────────────────────────────────────
  users             ||--o{  bpm_records             : "user_id"
  songs             ||--o{  bpm_records             : "song_id"
  practice_sessions ||--o{  bpm_records             : "session_id"

  %% ──────────────────────────────────────────────
  %% 리포트 도메인
  %% ──────────────────────────────────────────────
  users             ||--o{  reports                 : "user_id"

  %% ──────────────────────────────────────────────
  %% 커뮤니티 도메인
  %% ──────────────────────────────────────────────
  users ||--o{  friend_requests         : "from_user_id"
  users ||--o{  friend_requests         : "to_user_id"
  users ||--o{  friends                 : "user_id"
  users ||--o{  friends                 : "friend_id"
  users ||--o{  rooms                   : "host_id"
  users ||--o{  room_members            : "user_id"
  users ||--o{  room_join_requests      : "user_id"
  rooms ||--o{  room_members            : "room_id"
  rooms ||--o{  room_join_requests      : "room_id"

  %% ──────────────────────────────────────────────
  %% AI 평가 도메인
  %% ──────────────────────────────────────────────
  users             ||--o{  practice_recordings     : "user_id"
  practice_sessions ||--o{  practice_recordings     : "session_id"
  practice_recordings ||--o|  ai_analysis_jobs       : "recording_id"
  users             ||--o{  ai_analysis_jobs        : "user_id"
  ai_analysis_jobs  ||--o|  ai_analysis_results     : "job_id"
  users             ||--o{  ai_analysis_results     : "user_id"
  practice_sessions ||--o{  ai_analysis_results     : "session_id"
